# framesw-obs-plugin

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-macos.sh  package-windows.ps1
src/: calldata.rs  lib.rs  obs_data.rs  platform.rs
